fix flickering MSelect

--- a/MComponents/wwwroot/css/mcomponents-black.css
+++ b/MComponents/wwwroot/css/mcomponents-black.css
@@ -463,7 +463,7 @@ button:active {
   min-width: min-content;
 }
 .m-select-options-container .m-select-options-list-container .m-select-options-list {
-  max-height: 230px;
+  max-height: 40vh;
   height: auto;
   overflow-y: auto;
   list-style: none;
