--- a/MComponents/wwwroot/css/mcomponents-main.scss
+++ b/MComponents/wwwroot/css/mcomponents-main.scss
@@ -501,7 +501,7 @@
         min-width: min-content;
 
         .m-select-options-list {
-            max-height: 230px;
+            max-height: 40vh;
             height: auto;
             overflow-y: auto;
             list-style: none;
